[package]
name = "clarion"
version = "0.1.0"
edition = "2021"
authors = ["Alastair Campbell <alastair.campbell@runbox.com>"]
license = "MIT OR Apache-2.0"
keywords = ["clarion", "conversion", "capesoft"]
categories = ["development-tools::ffi", "data-structures", "date-and-time"]
description = "A library to simplify working with Clarion software data formats."
readme = "README.md"
repository = "https://github.com/abc/clarion/"

[dependencies]
time = { version = "0.3.5", features = ["macros"] }